# hijri

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml  winget-bootstrap.yml  winget.yml
assets/: demo.tape
docs/superpowers/plans/: 2026-06-18-hijri-cli.md
docs/superpowers/specs/: 2026-06-18-hijri-cli-design.md
src/: cli.rs  engine.rs  events.rs  json.rs  main.rs  names.rs  render.rs
tests/: cli.rs
