[package]
name = "hijri"
version = "0.3.0"
edition = "2021"
description = "A friendly cal-like command-line tool for Hijri (Islamic) dates (Umm al-Qura)"
license = "MIT"
repository = "https://github.com/UtmostBoundary/hijri"
homepage = "https://github.com/UtmostBoundary/hijri"
readme = "README.md"
keywords = ["hijri", "islamic", "calendar", "umm-al-qura", "cli"]
categories = ["command-line-utilities", "date-and-time"]

[[bin]]
name = "hijri"
path = "src/main.rs"

[dependencies]
icu_calendar = "2.2"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
